2018.11/_sources/plugins/available/feature-classifier/classify-consensus-blast.txt
classify-consensus-blast: BLAST+ consensus taxonomy classifier
==============================================================


.. raw:: html

   <table class="table action-info">
     <tbody>
       <tr>
         <th scope="row"><p></p>Citations</th>
         <td>

.. bibliography:: feature-classifier:classify-consensus-blast.bib
   :all:
   :keyprefix: feature-classifier:classify-consensus-blast:
   :labelprefix: feature-classifier:classify-consensus-blast:

.. raw:: html

         </td>
       </tr>
     </tbody>
   </table>


.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime feature-classifier classify-consensus-blast [OPTIONS]

     Assign taxonomy to query sequences using BLAST+. Performs BLAST+ local
     alignment between query and reference_reads, then assigns consensus
     taxonomy to each query sequence from among maxaccepts hits, min_consensus
     of which share that taxonomic assignment. Note that maxaccepts selects the
     first N hits with > perc_identity similarity to query, not the top N
     matches. For top N hits, use classify-consensus-vsearch.

   Options:
     --i-query ARTIFACT PATH FeatureData[Sequence]
                                     Sequences to classify taxonomically.
                                     [required]
     --i-reference-reads ARTIFACT PATH FeatureData[Sequence]
                                     reference sequences.  [required]
     --i-reference-taxonomy ARTIFACT PATH FeatureData[Taxonomy]
                                     reference taxonomy labels.  [required]
     --p-maxaccepts INTEGER RANGE    Maximum number of hits to keep for each
                                     query. Must be in range [1, infinity]. BLAST
                                     will choose the first N hits in the
                                     reference database that exceed perc_identity
                                     similarity to query.  [default: 10]
     --p-perc-identity FLOAT         Reject match if percent identity to query is
                                     lower. Must be in range [0.0, 1.0].
                                     [default: 0.8]
     --p-strand [minus|both|plus]    Align against reference sequences in forward
                                     ("plus"), reverse ("minus"), or both
                                     directions ("both").  [default: both]
     --p-evalue FLOAT                BLAST expectation value (E) threshold for
                                     saving hits.  [default: 0.001]
     --p-min-consensus FLOAT         Minimum fraction of assignments must match
                                     top hit to be accepted as consensus
                                     assignment. Must be in range (0.5, 1.0].
                                     [default: 0.51]
     --p-unassignable-label TEXT     [default: Unassigned]
     --o-classification ARTIFACT PATH FeatureData[Taxonomy]
                                     Taxonomy classifications of query sequences.
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config FILE               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.feature_classifier.methods import classify_consensus_blast

.. raw:: html

       <h4>Docstring:</h4>
         <pre>BLAST+ consensus taxonomy classifier

   Assign taxonomy to query sequences using BLAST+. Performs BLAST+ local
   alignment between query and reference_reads, then assigns consensus
   taxonomy to each query sequence from among maxaccepts hits, min_consensus
   of which share that taxonomic assignment. Note that maxaccepts selects the
   first N hits with > perc_identity similarity to query, not the top N
   matches. For top N hits, use classify-consensus-vsearch.

   Parameters
   ----------
   query : FeatureData[Sequence]
       Sequences to classify taxonomically.
   reference_reads : FeatureData[Sequence]
       reference sequences.
   reference_taxonomy : FeatureData[Taxonomy]
       reference taxonomy labels.
   maxaccepts : Int % Range(1, None), optional
       Maximum number of hits to keep for each query. Must be in range [1,
       infinity]. BLAST will choose the first N hits in the reference database
       that exceed perc_identity similarity to query.
   perc_identity : Float % Range(0.0, 1.0, inclusive_end=True), optional
       Reject match if percent identity to query is lower. Must be in range
       [0.0, 1.0].
   strand : Str % Choices({'both', 'minus', 'plus'}), optional
       Align against reference sequences in forward ("plus"), reverse
       ("minus"), or both directions ("both").
   evalue : Float, optional
       BLAST expectation value (E) threshold for saving hits.
   min_consensus : Float % Range(0.5, 1.0, inclusive_start=False, inclusive_end=True), optional
       Minimum fraction of assignments must match top hit to be accepted as
       consensus assignment. Must be in range (0.5, 1.0].
   unassignable_label : Str, optional

   Returns
   -------
   classification : FeatureData[Taxonomy]
       Taxonomy classifications of query sequences.</pre>
       </div>
     </div>
   </div>